# basealloc

./: CLAUDE.md  Cargo.toml  TODO.md  basealloc.c  clippy.toml  test
benches/: bench_classes.rs  bench_global.rs  bench_list.rs  bench_radix.rs  bench_slab.rs
crates/basealloc-alloc/: Cargo.toml
crates/basealloc-alloc/src/: arena.rs  bin.rs  bump.rs  classes.rs  emap.rs  lib.rs  lookup.rs  slab.rs  static_.rs  tcache.rs
crates/basealloc-bitmap/: Cargo.toml
crates/basealloc-bitmap/src/: lib.rs  tests.rs
crates/basealloc-drop/: Cargo.toml
crates/basealloc-drop/src/: expand.rs  graph.rs  lib.rs  parser.rs
crates/basealloc-extent/: Cargo.toml
crates/basealloc-extent/src/: lib.rs  tests.rs
crates/basealloc-fixed/: Cargo.toml
crates/basealloc-fixed/src/: bump.rs  fixed.rs  lib.rs  tests.rs
crates/basealloc-list/: Cargo.toml
crates/basealloc-list/src/: lib.rs  tests.rs
crates/basealloc-rbtree/: Cargo.toml
crates/basealloc-rbtree/src/: lib.rs
crates/basealloc-ring/: Cargo.toml
crates/basealloc-ring/src/: lib.rs  tests.rs
crates/basealloc-rtree/: Cargo.toml
crates/basealloc-rtree/src/: lib.rs  tests.rs
crates/basealloc-sync/: Cargo.toml
crates/basealloc-sync/src/: lazy.rs  lib.rs  local.rs
crates/basealloc-sys/: Cargo.toml
crates/basealloc-sys/src/: extent.rs  lib.rs  math.rs  misc.rs  prim.rs  system.rs  unix.rs
crates/basealloc-sys/src/system/: tests.rs
ffi/: Cargo.toml
ffi/src/: handler.rs  lib.rs
src/: lib.rs
