[package]
name = "basealloc"
version = "0.1.0"
edition = "2024"

[dependencies]
basealloc-alloc = { workspace = true }
libc = { workspace = true, optional = true }
basealloc-sync = { workspace = true }

[dev-dependencies]
criterion = "0.7.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
strip = "symbols"

[workspace]
members = [
  "crates/basealloc-alloc",
  "crates/basealloc-fixed",
  "crates/basealloc-list",
  "crates/basealloc-rtree",
  "crates/basealloc-sys",
  "crates/basealloc-bitmap",
  "crates/basealloc-sync",
  "crates/basealloc-rbtree",
  "crates/basealloc-extent",
  "ffi",
]
resolver = "3"

[workspace.dependencies]
libc = "0.2.176"
getset = "0.1.6"
spin = "0.10.0"
windows-sys = "0.61.2"

basealloc-sys = { path = "crates/basealloc-sys" }
basealloc-list = { path = "crates/basealloc-list" }
basealloc-fixed = { path = "crates/basealloc-fixed" }
basealloc-rtree = { path = "crates/basealloc-rtree" }
basealloc-bitmap = { path = "crates/basealloc-bitmap" }
basealloc-alloc = { path = "crates/basealloc-alloc" }
basealloc-sync = { path = "crates/basealloc-sync" }
basealloc-rbtree = { path = "crates/basealloc-rbtree" }
basealloc-extent = { path = "crates/basealloc-extent" }
basealloc = { path = "." }

[[bench]]
name = "bench_classes"
harness = false
