[package]
name = "basealloc-alloc"
version = "0.1.0"
edition = "2024"

[dependencies]
basealloc-sys = { workspace = true }
basealloc-list = { workspace = true }
basealloc-fixed = { workspace = true }
basealloc-rtree = { workspace = true }
basealloc-bitmap = { workspace = true }
basealloc-sync = { workspace = true }

spin = { workspace = true }
getset = { workspace = true }
